updates to scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore text files
 **/*.txt
 
+# Ignore python virtual environments
+**/venv/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
